footie_scores/webapp/static/styles.css
body {
    background-color: #eee;
    min-width: 300px;
    overflow-x: hidden;
    overflow-y: scroll;
    /* margin: auto; */
}

.main-panel {margin-left: 200px;}

#header {
    z-index: 999;
    position: fixed;
    top: 0px;
    left: 0px;
    right: 0px;
}

.sidebar {
    position: fixed;
    overflow: auto;
    top: 0;
    bottom: 0;
    width: 200px;
    background-color: white;
}

.sidebar li strong {
    color: rgba(0, 0, 0, .87);
    display: block;
    padding: 15px 22px;
    user-select: none;
}
.sidebar .sub-list li {
    color: rgba(0, 0, 0, .87);
    padding-left: 40px;
    padding-top: 5px;
    padding-bottom: 5px;
    user-select: none;
}

.sidebar .sub-list li:hover,
.sidebar .sub-list a:hover,
.sidebar li strong:hover,
.sidebar li a:hover  {
    background-color: #ded8d8;
    text-decoration: none;
    cursor: pointer;
}

.invisible-panel .mui-panel {
    padding: 0px;
    margin: 0px;
    background-color: #eee;
    box-shadow: none;
}

#view-header-row h1 {
    margin-bottom: 40px;
}

#view-header-row.mui-row,
#filter-options-row.mui-row,
#fixture-content-row.mui-row
{
    margin-left: -80px;
    margin-right: -80px;
}
#filter-options-row.mui-row {
    margin-bottom: 20px;}

#competition-panel.mui-panel,
#view-header-panel.mui-panel {
    /* min-width: 275px; */
    overflow: hidden;
}
#view-header-panel h1 {
    margin-bottom: 20px;
}

.competition-container .mui-container-fluid,
#view-header-container.mui-container,
#filter-container.mui-container-fluid
{
    max-width: 800px;
    overflow: hidden;
}

.game-panel.mui-panel,
.lineups-panel.mui-panel
{
    margin-bottom: 0px;
    white-space: nowrap;
}
.fixture-row.mui-row,
#comp-header-row.mui-row,
.lineups-row.mui-row {
    margin-left: -50px; margin-right: -50px;
}

.competition-name-header h2 {
    margin-top: 0px;
}

#filter-options-row a {
    text-align: center;
 }

#scoreline-row h4 {
    margin-top: 0;
    margin-bottom: 0;
}

.home-team, .away-team {white-space: initial;}
.home-team, .home-events {text-align: right;}
.away-team, .away-events {text-align: left;}
.home-events p, .away-events p {
    font-size: 10px;
    line-height: 1.5;
    margin-bottom: 0px;
}

.score, .lineups-heading {
    text-align: center;
    min-width: 50px;
}

.status {
    font-size: 10px;
    text-align: center;
    min-width: 50px;
}

.match-details {
    text-align: right;
    margin-right: 15px;
}

.time-footer {
    position: absolute;
    bottom: 0;
}

p.subbed_on {
    color: LimeGreen;
}
p.subbed_off{
    color: DarkOrange;
}

